created serach bar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </nav>
         <img id="dark_mode" src="images/sun.png" />
       </header>
+
+      <div class="search_flex">
+        <div class="search_container">
+          <input type="text" placeholder="Search..." />
+          <button>
+            <img class="magnifier_img" src="images/magnifier.png" />
+          </button>
+        </div>
+      </div>
     </main>
   </body>
 
