updated pokedex png

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="dark_theme">
     <main>
       <header>
-        <img class="logo" src="images/Pokédex_logo.png" alt="pokedex" />
+        <img class="logo" src="images/pokedex.png" alt="pokedex" />
         <div class="dark_mode_container">
           <img id="dark_mode" src="images/sun.png" />
         </div>
