--- a/card.html
+++ b/card.html
@@ -93,9 +93,13 @@
         </div>
 
         <hr />
-
+        
         <p class="description_title">Description</p>
-        <p class="pokemon_description"></p>
+
+        <div class = "pokemon_description_container">
+            <p class="pokemon_description"></p>
+        </div>
+     
 
         <div class="card_container">
             <div class="card_item">
@@ -109,8 +113,8 @@
             </div>
 
             <div class="card_item">
-                <p class="card_title">Habitat</p>
-                <p class="card_value pokemon_habitat"></p>
+                <p class="card_title">Catch Rate</p>
+                <p class="card_value capture_rate"></p>
             </div>
 
             <div class="card_item">
